# cardano

./: .gitconfig  .gitignore  .gitmodules  Cargo.toml  INSTALL.md  LICENSE  README.md  USAGE.md  autobadge-cardano-rust-cli-flat.md  autobadge-cardano-rust-cli-for-the-badge.md  build.rs  install.sh
lib/: Cargo.toml  README.md
lib/cardano_lib/: Cargo.toml
lib/cardano_lib/src/: lib.rs
lib/cardano_lib/src/utils/git/repo/: clone_repo.rs  mod.rs
lib/cardano_lib/src/utils/git/version/: check_version.rs  mod.rs
lib/cardano_lib/src/utils/globals/: mod.rs  spinners.rs
lib/cardano_lib/src/utils/http/: get_request.rs  mod.rs
lib/cardano_lib/src/utils/os/env/: set_env.rs
lib/cardano_lib/src/utils/os/fs/: change_dir.rs  check_component.rs  check_dir.rs  check_work_dir.rs  copy_binary.rs  create_dir.rs  setup_work_dir.rs
lib/cardano_lib/src/utils/prereqs/: mod.rs
lib/src/: cabal.rs  components.rs  ghc.rs  ghcup.rs  git.rs  globals.rs  lib.rs  libsodium.rs  secp256k1.rs  setup.rs
lib/src/os/fs/: check_home_dir.rs
lib/src/os/platform/distro/: install_distro_packages.rs
lib/src/os/process/: async_command_pipe.rs
lib/src/os/terminal/dialog/: spinner.rs
lib/src/os/terminal/shell/: change_shell_config.rs
lib/src/prereqs/: cabal.rs  mod.rs
lib/src/utils/: dialog.rs  distro.rs  env.rs  fs.rs  git.rs  globals.rs  install.rs  mod.rs  packages.rs  process.rs  shell.rs  stdout.rs  user.rs
lib/src/utils/fs/: check_dir.rs  check_work_dir.rs  copy_binary.rs  is_dir.rs  mod.rs  setup_work_dir.rs
lib/src/utils/git/: mod.rs
lib/src/utils/git/repo/: check_repo.rs  checkout_latest_release.rs  clone_cardano_repo.rs  clone_component.rs  clone_repo.rs  fetch_tags.rs  mod.rs
lib/src/utils/git/version/: check_installed_version.rs  check_latest_version.rs  check_version.rs  compare_version.rs  get_bin_path.rs  is_bin_installed.rs  mod.rs
lib/src/utils/globals/: envs.rs  mod.rs  packages.rs  paths.rs  spinners.rs  urls.rs  versions.rs
lib/src/utils/http/: get_request.rs
lib/src/utils/os/: env.rs  user.rs
lib/src/utils/os/env/: check_env.rs  mod.rs  set_env.rs  setup_env.rs
lib/src/utils/os/fs/: change_dir.rs  check_component.rs  check_dir.rs  check_home_dir.rs  copy_binary.rs  create_dir.rs  file_exists.rs  install_component.rs  mod.rs  setup_work_dir.rs
lib/src/utils/os/permissions/: chownr.rs  mod.rs
lib/src/utils/os/platform/: check_platform.rs
lib/src/utils/os/process/: async_command.rs  async_command_pipe.rs  async_user_command.rs  mod.rs  pipe.rs  process_success.rs  user_process_success.rs
lib/src/utils/os/terminal/: mod.rs
lib/src/utils/os/user/: check_root.rs  check_user.rs  mod.rs
lib/src/utils/permissions/: chownr.rs
lib/src/utils/platform/: distro.rs  install.rs  mod.rs  packages.rs
lib/src/utils/platform/distro/: check_distro_result.rs  mod.rs
lib/src/utils/prereqs/: ghc.rs  ghcup.rs  libsodium.rs
lib/src/utils/prereqs/cabal/: check_cabal.rs  check_installed_cabal.rs  compare_cabal.rs  get_cabal_version.rs  install_cabal.rs  mod.rs
lib/src/utils/prereqs/ghc/: check_ghc.rs  check_installed_ghc.rs  compare_ghc.rs  get_ghc_version.rs  get_ghc_version_url.rs  install_ghc.rs  mod.rs
lib/src/utils/prereqs/ghcup/: check_ghcup.rs  get_ghcup_install_url.rs  install_ghcup.rs  mod.rs
lib/src/utils/prereqs/libsodium/: check_libsodium.rs  get_libsodium_url.rs  install_libsodium.rs  mod.rs
lib/src/utils/prereqs/setup/: build_latest_component.rs  check_project_file.rs  configure_build.rs  install_build_dependencies.rs  mod.rs  prepare_build.rs
lib/src/utils/process/: is_program_installed.rs  process_success.rs  process_success_inherit.rs
lib/src/utils/setup/: build_component.rs  build_latest_component.rs  check_confirm.rs  check_dependencies.rs  check_install.rs  check_project_file.rs  configure_build.rs  get_component_path.rs  get_project_file.rs  install_build_dependencies.rs  install_component.rs  mod.rs  prepare_build.rs  set_confirm.rs  update_project_file.rs
lib/src/utils/terminal/: dialog.rs  shell.rs  stdout.rs
lib/src/utils/terminal/dialog/: proceed.rs
lib/src/utils/terminal/shell/: check_shell_config_env.rs
lib/src/utils/terminal/stdout/: print_emoji.rs
src/lib/: Cargo.toml
src/lib/src/: lib.rs
src/lib/src/cli/: dialog.rs  install.rs  install_node.rs  install_wallet.rs  mod.rs  run.rs  setup.rs  sync.rs  uninstall.rs  update.rs  update_cli.rs
src/lib/src/cli/address/: install.rs  mod.rs  setup.rs  uninstall.rs
src/lib/src/cli/bech32/: install.rs  setup.rs  uninstall.rs
src/lib/src/cli/node/: install.rs  mod.rs  run.rs  setup.rs  sync.rs  uninstall.rs
src/lib/src/cli/wallet/: install.rs  setup.rs  uninstall.rs
src/lib/src/components/: component.rs  node.rs
src/lib/src/config/: ghc.rs  ghcup.rs  globals.rs  libsodium.rs  mod.rs  secp256k1.rs  setup.rs
src/lib/src/configs/: cabal.rs  ghc.rs  globals.rs  logger.rs  mod.rs  secp256k1.rs  settings.rs  setup.rs  system.rs  test.rs
src/lib/src/utils/: dialog.rs  distro.rs  env.rs  executer.rs  fs.rs  git.rs  install.rs  logger.rs  mod.rs  network.rs  packages.rs  process.rs  shell.rs  stdout.rs  test.rs  uninstall.rs  update_cli.rs  user.rs
(+179 files in other folders)
