[workspace]

[package]
name = "cardano"
version = "0.0.1"
authors = ["Clemens Horn <clemens.horn@mni.thm.de>"]
edition = "2021"
license = "MIT"
description = "CLI for managing cardano components"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "lib" }
structopt = "0.3.26"
sudo = "0.6.0"
human-panic = "1.0.3"
ctrlc = "3.2.2"
anyhow = "1.0.57"
tokio = { version = "1.19.2", features = ["full"] }
console = "0.15.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
pretty_assertions = "1.0.0"
