[package]
name = "lib"
version = "0.0.1"
edition = "2018"
license = "MIT"
description = "Library for managing cardano components"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
sudo = "0.6.0"
console = "0.15.0"
dialoguer = "0.10.1"
anyhow = "1.0.57"
indicatif = "0.16.2"
convert_case = "0.5.0"
async-recursion = "1.0.0"
