[package]
name = "lib"
version = "0.0.1"
edition = "2018"
license = "MIT"
description = "Library for managing cardano components"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
dialoguer = "0.10.1"
anyhow = "1.0.57"
convert_case = "0.5.0"
sudo = "0.6.0"
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4.19"
config = "0.13.1"
lazy_static = "1.4.0"

[dev-dependencies]
ctor = "0.1.22"