[package]
name = "lib"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Library for managing cardano components"

[dependencies]
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4.19"
dirs = "4.0.0"
config = "0.13.1"
toml = "0.5.9"
serde = "1.0.138"
sysinfo = "0.24.5"
lazy_static = "1.4.0"
anyhow = "1.0.58"
convert_case = "0.5.0"
cardano-multiplatform-lib = "0.3.0"
dialoguer = "0.10.1"

[dev-dependencies]
ctor = "0.1.22"
tempfile = "3.3.0"